--- a/index.html
+++ b/index.html
@@ -10,5 +10,52 @@
 </head>
 <body>
 <h1>hola mundo</h1>
+<section>
+    <div class="container">
+        <div  class="row">
+            <div class="col-1 item-1">
+
+
+                1
+            </div>
+            <div  class="col-1 item-2">
+                2
+            </div>
+            <div class="col-1">
+                3
+            </div>
+            <div class="col-1">
+                4
+            </div>
+            <div class="col-1">
+                5
+            </div>
+            <div class="col-1">
+                6
+            </div>
+            <div class="col-1">
+                7
+            </div>
+            <div class="col-1">
+                8
+            </div>
+            <div class="col-1">
+                9
+            </div>
+            <div class="col-1">
+                10
+            </div>
+            <div class="col-1">
+                11
+            </div>
+            <div class="col-1">
+                12
+            </div>
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-1 item-2">
+                            1
+                        </div>
 </body>
 </html>
